# vessel

./: .gitignore  README.md  meson.build
data/: vessel.desktop
src/: archive.c  desktop.c  install.c  main.c  manifest.c  namespace.c  overlay.c  remove.c  repo.c  run.c  shim.c  tui.c  vessel.h
